2007-10-02  Sven Schuetz <sven@de.ibm.com>

	* objectpath.c:
	Removed patch for bug 1751084

2007-10-02  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-67.boeblingen.de.ibm.com>

	* args.c,array.c,brokerEnc.c,brokerUpc.c,cimXmlGen.c,cimXmlGen.h,
	cimXmlRequest.c,constClass.c,context.c,datetime.c,httpAdapter.c,
	instance.c,internalProvider.c,Status:,interopProvider.c,native.h,
	objectImpl.c,objectpath.c,predicate.c,qualifier.c,qualifierProvider.c,
	selectexp.c,string.c,support.c,utilft.h:
	Fixed 1805644: HTTP Adapter Performance Improvements. Avoid useless
	string length measurements and double copies.

2007-10-02  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, cimXmlParser.c:
	Fixed 1759083: sfcb cannot handle the embeddedobject attribute

2007-09-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-67.boeblingen.de.ibm.com>

	* cimcClientSfcbLocal.h: 
	Fixed 1791690: also fix header file definition.

2007-09-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-67.boeblingen.de.ibm.com>

	* objectImplSwapI32toP32.c, sfcbdumpP32onI32.c:
	Fixed 1793223: add padding for the cross-compile definition of
	ClProperty.

2007-09-12  Sven Schuetz <sven@de.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed 1791690: segfault with local call in newCMPIString

2007-09-10  Sven Schuetz <sven@de.ibm.com>

	* objectImpl.h:
	Additional patch for 1685254: added new objectImpl level

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1769471: multiple handlers do not work as expected

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, instance.c, instance.h, objectImpl.c, objectImpl.h:
	Fixed 1784913: change filter handling

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* providerMgr.c:
	Fixed 1770841: one provider for multiple associations problem

2007-08-28  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimXmlGen.h, cimXmlGen.c:
	Fixed 1780595: xml special chars are not escaped in error description

2007-08-28  Sven Schuetz <sven@de.ibm.com>
